<resources>
    <string name="app_name">LoginPage</string>
    <string name="register">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
    <string name="create">Create Your Account</string>
    <string name="username">Username</string>
    <string name="id">Student ID</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
</resources>