<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEFD5"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:fontFamily="casual"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/create" />

    <LinearLayout
        android:layout_width="373sp"
        android:layout_height="199sp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="text"
            android:text="@string/username" />

        <EditText
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="text"
            android:text="@string/id" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="text"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="text"
            android:text="@string/pass" />


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Register"
        android:textColor="@android:color/white"
        />


</LinearLayout>